--- a/src/styles/slider/buttons.css
+++ b/src/styles/slider/buttons.css
@@ -17,7 +17,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767.98px) {
   .nav-button {
     margin-top: 20px;
     margin-left: 0.5rem;
